test turn and gradient with rotate property

--- a/transforms/style.css
+++ b/transforms/style.css
@@ -36,5 +36,7 @@
 }
 
 #rotate:hover {
-    transform: rotate(90deg)
+    /* transform: rotate(90deg) */
+    /* transform: rotate(1turn) */
+    transform: rotate(400grad)
 }
